refactor(vinculacion): use Stream.toList() instead of Collectors.toList()